--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-joi-middleware": "^1.0.0",
     "express-joi-validator": "^2.0.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
