--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "express-joi-middleware": "^1.0.0",
     "express-joi-validator": "^2.0.1",
+    "helmet": "^3.16.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.2",
