--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.2",
+    "multer": "^1.4.1",
     "winston": "^3.2.1"
   }
 }
