--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "multer": "^1.4.1",
     "winston": "^3.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^9.1.1",
+    "should": "^13.2.3",
+    "supertest": "^6.1.6"
+  },
   "scripts": {
     "test": "test.js",
     "start": "node server.js"
